feat(admin/client): added methods for orders and profile
